# platformer

./: CMakeLists.txt  README.md
include/: animation.h  animation_manager.h  bugs.h  bullet.h  config.h  enemy.h  entity.h  font_manager.h  health_bar.h  map.h  map_obstacle.h  menu.h  moving_platform.h  player.h  resource_holder.h  resource_manager.h  texture_manager.h  view.h  window.h
src/: font_manager.cpp  main.cpp  resource_holder.cpp  texture_manager.cpp  window.cpp
